--- a/packages/spotx/package.json
+++ b/packages/spotx/package.json
@@ -49,9 +49,10 @@
     "@polkadot/types": "^0.45.13",
     "@types/jest": "^23.3.10",
     "bn.js": "4.11.8",
-    "cennznet-api": "^0.7.4",
-    "cennznet-runtime-types": "^0.7.4",
-    "cennznet-wallet": "^0.7.4",
+    "cennznet-api": "^0.7.6",
+    "cennznet-generic-asset": "^0.1.10",
+    "cennznet-runtime-types": "^0.7.6",
+    "cennznet-wallet": "^0.7.6",
     "jest": "24.1.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.66.6",
