--- a/packages/spotx/package.json
+++ b/packages/spotx/package.json
@@ -50,7 +50,6 @@
     "@types/jest": "^23.3.10",
     "bn.js": "4.11.8",
     "cennznet-api": "^0.7.6",
-    "cennznet-generic-asset": "^0.1.10",
     "cennznet-runtime-types": "^0.7.6",
     "cennznet-wallet": "^0.7.6",
     "jest": "24.1.0",
@@ -66,6 +65,7 @@
   "dependencies": {
     "@polkadot/keyring": "^0.34.23",
     "@polkadot/util": "^0.34.23",
-    "@polkadot/util-crypto": "^0.34.23"
+    "@polkadot/util-crypto": "^0.34.23",
+    "cennznet-generic-asset": "^0.1.10"
   }
 }
