--- a/ci/deployment/DockerfileToPublish
+++ b/ci/deployment/DockerfileToPublish
@@ -6,7 +6,6 @@ ARG GIT_NAME
 ARG GIT_EMAIL
 ARG GEMFURY_TOKEN
 ARG GEMFURY_EXTERNAL_TOKEN
-ARG RELEASE_SCOPE
 
 # add credentials on build
 RUN mkdir /root/.ssh/
@@ -14,6 +13,7 @@ COPY ./git-ssh-key ./git-ssh-key
 RUN mv ./git-ssh-key /root/.ssh/id_rsa
 RUN chmod 700 /root/.ssh/id_rsa
 RUN echo 'IdentityFile /root/.ssh/id_rsa' > ~/.ssh/config
+
 
 # make sure your domain is accepted
 RUN touch /root/.ssh/known_hosts
@@ -27,18 +27,20 @@ RUN git config user.email ${GIT_EMAIL}
 RUN git status
 RUN git reset --hard
 
-# Version packages and create versioned GIT commit
-RUN npx lerna version ${RELEASE_SCOPE} --yes --no-commit-hooks --force-publish=*
+RUN npx lerna exec -- 'cpx package.json build/'
 
 # pack packages for uploading
-RUN npx lerna exec -- "npm pack"
+RUN npx lerna exec --scope={@cennznet/spotx_test} -- "cd build && npm pack"
+# pack packages for uploading
+# RUN npx lerna exec -- "npm pack"
 
 # push all packages to Gemfury centrality
 RUN \
   echo 'Pushing packages \${workdir} to Gemfury' && \
-  npx lerna exec \
+  npx lerna exec --scope={@cennznet/spotx_test} \
     -- \
       "\
+        cd build && \
         PUSH_URL=\"https://${GEMFURY_TOKEN}@push.fury.io/centrality/\" && \
         PACKAGE_NAME=\$(ls *.tgz) && \
         TAR_PATH=\"\$(pwd)/\${PACKAGE_NAME}\" && \
@@ -57,9 +59,10 @@ RUN \
 # push all packages to Gemfury centrality external
 RUN \
   echo 'Pushing packages \${workdir} to Gemfury' && \
-  npx lerna exec \
+  npx lerna exec --scope={@cennznet/api_test,@cennznet/types_test,@cennznet/wallet_test,@cennznet/util_test} \
     -- \
       "\
+        cd build && \
         PUSH_URL=\"https://${GEMFURY_EXTERNAL_TOKEN}@push.fury.io/centralityexternals/\" && \
         PACKAGE_NAME=\$(ls *.tgz) && \
         TAR_PATH=\"\$(pwd)/\${PACKAGE_NAME}\" && \
