fix pipeline failure

--- a/ci/pr/Dockerfile
+++ b/ci/pr/Dockerfile
@@ -8,6 +8,10 @@ COPY lerna.json package.json yarn.lock tslint.json .prettierignore .prettierrc .
 Run npm config set registry https://npm-proxy.fury.io/${GEMFURY_TOKEN}/centrality/
 Run npm config set always-auth true
 
+# error on jenkins pipeline - mnpm ERR! 404 Not Found: yarn@latest
+RUN yarn config set registry https://registry.npmjs.org
+RUN rm yarn.lock
+
 RUN npm install -g yarn
 RUN yarn install -q
 
