--- a/ci/deployment/DockerfileToPublish
+++ b/ci/deployment/DockerfileToPublish
@@ -27,20 +27,17 @@ RUN git config user.email ${GIT_EMAIL}
 RUN git status
 RUN git reset --hard
 
-RUN npx lerna exec -- 'cpx package.json build/'
-
 # pack packages for uploading
-RUN npx lerna exec --scope={@cennznet/spotx_test} -- "cd build && npm pack"
+RUN npx lerna exec -- "npm pack"
 # pack packages for uploading
 # RUN npx lerna exec -- "npm pack"
 
 # push all packages to Gemfury centrality
 RUN \
   echo 'Pushing packages \${workdir} to Gemfury' && \
-  npx lerna exec --scope={@cennznet/spotx_test} \
+  npx lerna exec \
     -- \
       "\
-        cd build && \
         PUSH_URL=\"https://${GEMFURY_TOKEN}@push.fury.io/centrality/\" && \
         PACKAGE_NAME=\$(ls *.tgz) && \
         TAR_PATH=\"\$(pwd)/\${PACKAGE_NAME}\" && \
@@ -59,10 +56,9 @@ RUN \
 # push all packages to Gemfury centrality external
 RUN \
   echo 'Pushing packages \${workdir} to Gemfury' && \
-  npx lerna exec --scope={@cennznet/api_test,@cennznet/types_test,@cennznet/wallet_test,@cennznet/util_test} \
+  npx lerna exec \
     -- \
       "\
-        cd build && \
         PUSH_URL=\"https://${GEMFURY_EXTERNAL_TOKEN}@push.fury.io/centralityexternals/\" && \
         PACKAGE_NAME=\$(ls *.tgz) && \
         TAR_PATH=\"\$(pwd)/\${PACKAGE_NAME}\" && \
