--- a/packages/spotx/package.json
+++ b/packages/spotx/package.json
@@ -2,6 +2,7 @@
   "name": "@cennznet/spotx",
   "version": "0.4.0",
   "description": "",
+  "private": true,
   "engines": {
     "node": "^10.13.0",
     "yarn": "^1.12.3"
