--- a/packages/spotx/package.json
+++ b/packages/spotx/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@cennznet/spotx",
+  "name": "@cennznet/crml-cennzx-spot",
   "version": "0.4.0",
-  "description": "",
+  "description": "the javascript sdk for cennznet runtime module: CennzxSpot. also a plugin of @cennznet/api",
   "private": true,
   "engines": {
     "node": "^10.13.0",
@@ -10,45 +10,36 @@
   "author": "Centrality Development Team",
   "homepage": "https://bitbucket.org/centralitydev/cennznet-js-spotx#readme",
   "license": "ISC",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "main": "index.js",
+  "types": "index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@bitbucket.org:centralitydev/cennznet-js-spotx.git"
   },
   "scripts": {
-    "build": "rimraf dist && rollup -c rollup.config.ts",
+    "build": "rimraf build && tsc -b",
     "test:unitBackup": "jest --coverage -c ../../jest/jest.config.js spec",
     "test:unitDebug": "node --inspect-brk ./node_modules/.bin/jest -c ../../jest/jest.config.js spec",
     "test:e2e": "jest --silent --runInBand --detectOpenHandles -c ../../jest/jest.config.js e2e",
     "test:e2eDebug": "node --inspect-brk ./node_modules/.bin/jest --runInBand --detectOpenHandles -c ../../jest/jest.config.js e2e"
   },
   "peerDependencies": {
-    "@cennznet/api": ">= 0.9.4",
-    "@cennznet/types": ">= 0.9.4",
-    "@cennznet/util": ">= 0.9.4"
+    "@cennznet/api": ">= 0.10.2",
+    "@cennznet/types": ">= 0.10.2",
+    "@cennznet/util": ">= 0.10.2"
   },
   "devDependencies": {
-    "@cennznet/api": "^0.9.4",
-    "@cennznet/types": "^0.9.4",
-    "@cennznet/util": "^0.9.4",
-    "@cennznet/wallet": "^0.9.4",
+    "@cennznet/api": "^0.10.2",
+    "@cennznet/types": "^0.10.2",
+    "@cennznet/util": "^0.10.2",
+    "@cennznet/wallet": "^0.10.2",
     "@types/jest": "^23.3.10",
     "bn.js": "4.11.8",
     "jest": "24.1.0",
     "rimraf": "^2.6.2",
-    "rollup": "^0.66.6",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.17.1",
-    "typescript": "^3.1.6"
+    "typescript": "^3.4.1"
   },
   "dependencies": {
-    "@cennznet/generic-asset": "^0.4.0"
+    "@cennznet/crml-generic-asset": "^0.5.2"
   }
 }
