--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
         "tslint-microsoft-contrib": "^5.2.1"
     },
     "resolutions": {
-        "js-yaml": "^3.13.0",
+        "js-yaml": "^3.13.1",
         "braces": "^2.3.2",
-        "tar": "^4.4.8"
+        "tar": "^4.4.8",
+        "handlebars": "^4.1.2",
+        "marked": "^0.6.2"
     },
     "config": {
         "commitizen": {
