--- a/packages/spotx/package.json
+++ b/packages/spotx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cennznet/crml-cennzx-spot",
-  "version": "0.5.0",
+  "version": "0.5.2",
   "description": "the javascript sdk for cennznet runtime module: CennzxSpot. also a plugin of @cennznet/api",
   "private": true,
   "engines": {
@@ -9,7 +9,7 @@
   },
   "author": "Centrality Development Team",
   "homepage": "https://bitbucket.org/centralitydev/cennznet-js-spotx#readme",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "main": "index.js",
   "types": "index.d.ts",
   "repository": {
