--- a/packages/spotx/package.json
+++ b/packages/spotx/package.json
@@ -2,19 +2,21 @@
   "name": "@cennznet/crml-cennzx-spot",
   "version": "0.5.0",
   "description": "the javascript sdk for cennznet runtime module: CennzxSpot. also a plugin of @cennznet/api",
-  "private": true,
   "engines": {
     "node": "^10.13.0",
     "yarn": "^1.12.3"
   },
-  "author": "Centrality Development Team",
-  "homepage": "https://bitbucket.org/centralitydev/cennznet-js-spotx#readme",
-  "license": "ISC",
+  "author": "Ian He <ian.he@centrality.ai>",
+  "maintainers": [
+    "Centrality Development Team"
+  ],
+  "homepage": "https://github.com/cennznet/crml-cennzx-spot.js/tree/master/packages/spotx",
+  "license": "Apache 2.0",
   "main": "index.js",
   "types": "index.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org:centralitydev/cennznet-js-spotx.git"
+    "url": "git+ssh://git@bgithub.com/cennznet/crml-cennzx-spot.js.git"
   },
   "scripts": {
     "build": "rimraf build && tsc -b",
@@ -24,22 +26,22 @@
     "test:e2eDebug": "node --inspect-brk ./node_modules/.bin/jest --runInBand --detectOpenHandles -c ../../jest/jest.config.js e2e"
   },
   "peerDependencies": {
-    "@cennznet/api": ">= 0.12.0",
-    "@cennznet/types": ">= 0.12.0",
-    "@cennznet/util": ">= 0.12.0"
+    "@cennznet/api": ">= 0.12.1",
+    "@cennznet/types": ">= 0.12.1",
+    "@cennznet/util": ">= 0.12.1"
   },
   "devDependencies": {
-    "@cennznet/api": "^0.12.0",
-    "@cennznet/types": "^0.12.0",
-    "@cennznet/util": "^0.12.0",
-    "@cennznet/wallet": "^0.12.0",
+    "@cennznet/api": "^0.12.1",
+    "@cennznet/types": "^0.12.1",
+    "@cennznet/util": "^0.12.1",
+    "@cennznet/wallet": "^0.12.1",
     "@types/jest": "^23.3.10",
     "bn.js": "4.11.8",
     "jest": "24.1.0",
     "rimraf": "^2.6.2",
-    "typescript": "^3.4.1"
+    "typescript": "^3.4.5"
   },
   "dependencies": {
-    "@cennznet/crml-generic-asset": "^0.7.0"
+    "@cennznet/crml-generic-asset": "^0.7.2"
   }
 }
