feat: constructor of CennzxSpot(Rx) are now public, and throw Error if used in wrong order
Merged in improve_constructor (pull request #23)

Approved-by: Build Account <build@centrality.ai>

--- a/ci/pr/Dockerfile
+++ b/ci/pr/Dockerfile
@@ -2,18 +2,19 @@ FROM node:10.13.0
 WORKDIR /workdir
 ARG GEMFURY_TOKEN
 
-COPY lerna.json package.json yarn.lock tslint.json .prettierignore .prettierrc ./
-
 RUN npm install -g yarn@1.15.2
-RUN yarn install -q
 
 # set registry
 Run npm config set registry https://npm-proxy.fury.io/${GEMFURY_TOKEN}/centrality/
 Run npm config set always-auth true
 
+COPY lerna.json package.json yarn.lock tslint.json .prettierignore .prettierrc ./
+
 # install dependecies for packages
 COPY ./packages/spotx/package.json ./packages/spotx/
-RUN npx lerna bootstrap
+
+RUN yarn -q
+
 # TODO - add changelog related changes
 #COPY CHANGELOG.md ./
 COPY . .
