fix: lint issues
* fix: lint issues
* generate CHANGELOG

Merged in pipeline (pull request #21)

Approved-by: Build Account <build@centrality.ai>
Approved-by: Ian He <ian-he@outlook.com>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "workspaces": [
         "packages/*"
     ],
-    "scripts": {},
+    "scripts": {
+        "tslint": "tslint -c tslint.json --project ./packages/spotx"
+    },
     "devDependencies": {
         "@types/jest": "^23.3.10",
         "cpx": "^1.5.0",
