--- a/ci/pr/Dockerfile
+++ b/ci/pr/Dockerfile
@@ -2,21 +2,20 @@ FROM node:10.13.0
 WORKDIR /workdir
 ARG GEMFURY_TOKEN
 
-RUN npm install -g yarn@1.15.2
-
-# set registry
-Run npm config set registry https://npm-proxy.fury.io/${GEMFURY_TOKEN}/centrality/
-Run npm config set always-auth true
+ENV npm_config_registry="https://npm-proxy.fury.io/${GEMFURY_TOKEN}/centrality/"
 
 COPY lerna.json package.json yarn.lock tslint.json .prettierignore .prettierrc ./
 
+RUN npm install -g yarn
+RUN yarn install -q
+
 # install dependecies for packages
 COPY ./packages/spotx/package.json ./packages/spotx/
+RUN npx lerna bootstrap
 
-RUN yarn -q
-
-# TODO - add changelog related changes
-#COPY CHANGELOG.md ./
+# copy source code
 COPY . .
+
 # build
 RUN npx lerna run build
+# RUN yarn build
