--- a/packages/spotx/package.json
+++ b/packages/spotx/package.json
@@ -26,22 +26,21 @@
     "test:e2eDebug": "node --inspect-brk ./node_modules/.bin/jest --runInBand --detectOpenHandles -c ../../jest/jest.config.js e2e"
   },
   "peerDependencies": {
-    "@cennznet/api": ">= 0.13.1",
-    "@cennznet/types": ">= 0.13.1",
-    "@cennznet/util": ">= 0.13.1"
+    "@cennznet/api": ">= 0.13.2",
+    "@cennznet/crml-generic-asset": ">= 0.8.0",
+    "@cennznet/types": ">= 0.13.2",
+    "@cennznet/util": ">= 0.13.2"
   },
   "devDependencies": {
-    "@cennznet/api": "^0.13.1",
-    "@cennznet/types": "^0.13.1",
-    "@cennznet/util": "^0.13.1",
-    "@cennznet/wallet": "^0.13.1",
+    "@cennznet/api": "^0.13.2",
+    "@cennznet/crml-generic-asset": "^0.8.0",
+    "@cennznet/types": "^0.13.2",
+    "@cennznet/util": "^0.13.2",
+    "@cennznet/wallet": "^0.13.2",
     "@types/jest": "^23.3.10",
     "bn.js": "4.11.8",
     "jest": "24.1.0",
     "rimraf": "^2.6.2",
     "typescript": "^3.4.5"
-  },
-  "dependencies": {
-    "@cennznet/crml-generic-asset": "^0.8.0"
   }
 }
