--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
   - export PATH=$HOME/.yarn/bin::$(yarn global bin):$(yarn global dir):$PATH
   - yarn add @plugnet/dev@latest -W
+  - git reset --hard
 script:
   - yarn plugnet-dev-travis-build
 branches:
