--- a/packages/spotx/package.json
+++ b/packages/spotx/package.json
@@ -3,7 +3,7 @@
   "version": "0.5.6",
   "description": "the javascript sdk for cennznet runtime module: CennzxSpot. also a plugin of @cennznet/api",
   "engines": {
-    "node": "^10.13.0",
+    "node": ">=10.13.0",
     "yarn": "^1.12.3"
   },
   "author": "Ian He <ian.he@centrality.ai>",
@@ -22,17 +22,17 @@
     "build": "echo \"Error: run build from root\" && exit 1"
   },
   "peerDependencies": {
-    "@cennznet/api": ">= 0.13.2",
+    "@cennznet/api": ">= 0.14.0",
     "@cennznet/crml-generic-asset": ">= 0.8.0",
-    "@cennznet/types": ">= 0.13.2",
-    "@cennznet/util": ">= 0.13.2"
+    "@cennznet/types": ">= 0.14.0",
+    "@cennznet/util": ">= 0.14.0"
   },
   "devDependencies": {
-    "@cennznet/api": "^0.13.2",
+    "@cennznet/api": "^0.14.0",
     "@cennznet/crml-generic-asset": "^0.8.0",
-    "@cennznet/types": "^0.13.2",
-    "@cennznet/util": "^0.13.2",
-    "@cennznet/wallet": "^0.13.2",
+    "@cennznet/types": "^0.14.0",
+    "@cennznet/util": "^0.14.0",
+    "@cennznet/wallet": "^0.14.0",
     "@types/jest": "^23.3.10",
     "bn.js": "4.11.8",
     "jest": "24.1.0"
