--- a/packages/spotx/package.json
+++ b/packages/spotx/package.json
@@ -19,9 +19,7 @@
     "url": "git+ssh://git@bgithub.com/cennznet/crml-cennzx-spot.js.git"
   },
   "scripts": {
-    "build": "rimraf build && tsc -b",
-    "test:unitBackup": "jest --coverage -c ../../jest/jest.config.js spec",
-    "test:unitDebug": "node --inspect-brk ./node_modules/.bin/jest -c ../../jest/jest.config.js spec"
+    "build": "echo \"Error: run build from root\" && exit 1"
   },
   "peerDependencies": {
     "@cennznet/api": ">= 0.13.2",
@@ -37,8 +35,6 @@
     "@cennznet/wallet": "^0.13.2",
     "@types/jest": "^23.3.10",
     "bn.js": "4.11.8",
-    "jest": "24.1.0",
-    "rimraf": "^2.6.2",
-    "typescript": "^3.4.5"
+    "jest": "24.1.0"
   }
 }
